--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Arman Mahmoudi</title>
+    <title>Amino Acids - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="sidebar">
+    <div class="menu">
         <ul>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Biography</a></li>
-            <li><a href="#">Statement</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Instagram</a></li>
+            <li><span class="icon">G</span> Gallery</li>
+            <li><span class="icon">B</span> Biography</li>
+            <li><span class="icon">S</span> Statement</li>
+            <li><span class="icon">N</span> News <span class="badge">NEW</span></li>
+            <li><span class="icon">C</span> Contact</li>
+            <li><span class="icon insta">&#xf16d;</span> Instagram</li>
         </ul>
-    </nav>
-    <div class="background-text">
-        <h1>arman mahmoudi</h1>
+    </div>
+    <div class="center-text">
+        <h1>Amino Acids</h1>
+        <h2>Vahid Chamani</h2>
     </div>
 </body>
 </html>
+
