--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Amino Acids - Home</title>
+    <title>Levitation - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,8 +17,8 @@
         </ul>
     </div>
     <div class="center-text">
-        <h1>Amino Acids</h1>
-        <h2>Vahid Chamani</h2>
+        <h1>Arman Mahmoudi</h1>
+        <h2>Levitation</h2>
     </div>
 </body>
 </html>
