--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Levitation - Home</title>
+    <title>Arman Mahmoudi</title>
     <link rel="stylesheet" href="style.css">
+    <!-- فونت آیکون اینستاگرام -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="menu">
+    <div class="center-text">
+        <h1>Arman Mahmoudi</h1>
+        <h2>Levitation</h2>
+    </div>
+    <nav class="menu">
         <ul>
             <li><span class="icon">G</span> Gallery</li>
             <li><span class="icon">B</span> Biography</li>
@@ -15,11 +21,6 @@
             <li><span class="icon">C</span> Contact</li>
             <li><span class="icon insta">&#xf16d;</span> Instagram</li>
         </ul>
-    </div>
-    <div class="center-text">
-        <h1>Arman Mahmoudi</h1>
-        <h2>Levitation</h2>
-    </div>
+    </nav>
 </body>
 </html>
-
