--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Arman Mahmoudi</title>
     <link rel="stylesheet" href="style.css">
-    <!-- فونت آیکون اینستاگرام -->
+    <!-- Font Awesome for Instagram icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -14,12 +14,12 @@
     </div>
     <nav class="menu">
         <ul>
-            <li><span class="icon">G</span> Gallery</li>
-            <li><span class="icon">B</span> Biography</li>
-            <li><span class="icon">S</span> Statement</li>
-            <li><span class="icon">N</span> News <span class="badge">NEW</span></li>
-            <li><span class="icon">C</span> Contact</li>
-            <li><span class="icon insta">&#xf16d;</span> Instagram</li>
+            <li><a href="gallery/"><span class="icon">G</span> Gallery</a></li>
+            <li><a href="#biography"><span class="icon">B</span> Biography</a></li>
+            <li><a href="#statement"><span class="icon">S</span> Statement</a></li>
+            <li><a href="#news"><span class="icon">N</span> News <span class="badge">NEW</span></a></li>
+            <li><a href="#contact"><span class="icon">C</span> Contact</a></li>
+            <li><a href="https://instagram.com/yourusername" target="_blank"><span class="icon insta">&#xf16d;</span> Instagram</a></li>
         </ul>
     </nav>
 </body>
