--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </div>
     <nav class="menu">
         <ul>
-            <li><a href="gallery/"><span class="icon">G</span> Gallery</a></li>
-            <li><a href="#biography"><span class="icon">B</span> Biography</a></li>
-            <li><a href="#statement"><span class="icon">S</span> Statement</a></li>
-            <li><a href="#news"><span class="icon">N</span> News <span class="badge">NEW</span></a></li>
-            <li><a href="#contact"><span class="icon">C</span> Contact</a></li>
-            <li><a href="https://instagram.com/yourusername" target="_blank"><span class="icon insta">&#xf16d;</span> Instagram</a></li>
+            <li onclick="location.href='gallery/'"><span class="icon">G</span> Gallery</li>
+            <li onclick="location.href='#biography'"><span class="icon">B</span> Biography</li>
+            <li onclick="location.href='#statement'"><span class="icon">S</span> Statement</li>
+            <li onclick="location.href='#news'"><span class="icon">N</span> News <span class="badge">NEW</span></li>
+            <li onclick="location.href='#contact'"><span class="icon">C</span> Contact</li>
+            <li onclick="window.open('https://instagram.com/yourusername', '_blank')"><span class="icon insta">&#xf16d;</span> Instagram</li>
         </ul>
     </nav>
 </body>
