--- a/index.html
+++ b/index.html
@@ -5,23 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arman Mahmoudi</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome for Instagram icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="center-text">
-        <h1>Arman Mahmoudi</h1>
-        <h2>Levitation</h2>
+        <h1>ARMAN MAHMOUDI</h1>
+        <h2>DIGITAL ARTIST</h2>
     </div>
-    <nav class="menu">
+
+    <div class="menu">
         <ul>
-            <li onclick="location.href='gallery/'"><span class="icon">G</span> Gallery</li>
-            <li onclick="location.href='#biography'"><span class="icon">B</span> Biography</li>
-            <li onclick="location.href='#statement'"><span class="icon">S</span> Statement</li>
-            <li onclick="location.href='#news'"><span class="icon">N</span> News <span class="badge">NEW</span></li>
-            <li onclick="location.href='#contact'"><span class="icon">C</span> Contact</li>
-            <li onclick="window.open('https://instagram.com/yourusername', '_blank')"><span class="icon insta">&#xf16d;</span> Instagram</li>
+            <li onclick="location.href='about/'">
+                <span class="icon">!</span>
+                ABOUT
+            </li>
+            <li onclick="location.href='gallery/'">
+                <span class="icon">@</span>
+                WORKS
+                <span class="badge">NEW</span>
+            </li>
+            <li onclick="location.href='news/'">
+                <span class="icon">#</span>
+                NEWS
+            </li>
+            <li onclick="location.href='statement/'">
+                <span class="icon">$</span>
+                STATEMENT
+            </li>
+            <li onclick="location.href='links/'">
+                <span class="icon">%</span>
+                LINKS
+            </li>
+            <li onclick="location.href='contact/'">
+                <span class="insta">&#xf16d;</span>
+                CONTACT
+            </li>
         </ul>
-    </nav>
+    </div>
 </body>
 </html>
