--- a/index.html
+++ b/index.html
@@ -15,27 +15,31 @@
     <div class="menu">
         <ul>
             <li onclick="location.href='about/'">
-                <span class="icon">!</span>
+                <span class="icon">A</span>
                 ABOUT
             </li>
             <li onclick="location.href='gallery/'">
-                <span class="icon">@</span>
+                <span class="icon">W</span>
                 WORKS
                 <span class="badge">NEW</span>
             </li>
+            <li onclick="location.href='gallery/'">
+                <span class="icon">G</span>
+                GALLERY
+            </li>
             <li onclick="location.href='news/'">
-                <span class="icon">#</span>
+                <span class="icon">N</span>
                 NEWS
             </li>
             <li onclick="location.href='statement/'">
-                <span class="icon">$</span>
+                <span class="icon">S</span>
                 STATEMENT
             </li>
             <li onclick="location.href='links/'">
-                <span class="icon">%</span>
+                <span class="icon">L</span>
                 LINKS
             </li>
-            <li onclick="location.href='contact/'">
+            <li onclick="window.open('https://instagram.com/armanmahmoudi.art', '_blank')">
                 <span class="insta">&#xf16d;</span>
                 CONTACT
             </li>
