--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Arman Mahmoudi</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="../">HOME</a></li>
-            <li><a href="../about/">ABOUT</a></li>
-            <li><a href="../gallery/" class="active">WORKS</a></li>
-            <li><a href="../news/">NEWS</a></li>
-            <li><a href="../statement/">STATEMENT</a></li>
-            <li><a href="../links/">LINKS</a></li>
-            <li><a href="https://instagram.com/armanmahmoudi.art" target="_blank">CONTACT</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#" class="active">WORKS</a></li>
+            <li><a href="#">NEWS</a></li>
+            <li><a href="#">STATEMENT</a></li>
+            <li><a href="#">LINKS</a></li>
+            <li><a href="#">CONTACT</a></li>
         </ul>
     </nav>
 
@@ -23,45 +23,45 @@
 
     <div class="gallery-grid">
         <div class="gallery-item">
-            <img src="gallery1.jpg" alt="gallery 1">
+            <img src="gallery%201.png" alt="gallery 1">
             <span>gallery 1</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery2.jpg" alt="gallery 2">
+            <img src="gallery%202.png" alt="gallery 2">
             <span>gallery 2</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery3.jpg" alt="gallery 3">
+            <img src="gallery%203.png" alt="gallery 3">
             <span>gallery 3</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery4.jpg" alt="gallery 4">
+            <img src="gallery%204.png" alt="gallery 4">
             <span>gallery 4</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery5.jpg" alt="gallery 5">
+            <img src="gallery%205.png" alt="gallery 5">
             <span>gallery 5</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery6.jpg" alt="gallery 6">
+            <img src="gallery%206.png" alt="gallery 6">
             <span>gallery 6</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery7.jpg" alt="gallery 7">
+            <img src="gallery%207.png" alt="gallery 7">
             <span>gallery 7</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery8.jpg" alt="gallery 8">
+            <img src="gallery%208.png" alt="gallery 8">
             <span>gallery 8</span>
         </div>
         <div class="gallery-item">
-            <img src="gallery9.jpg" alt="gallery 9">
+            <img src="gallery%209.png" alt="gallery 9">
             <span>gallery 9</span>
         </div>
     </div>
 
     <footer>
-          © 2021
+        © 2021
     </footer>
 </body>
 </html>
