--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,106 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>گالری</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../">HOME</a></li>
-            <li><a href="../about/">ABOUT</a></li>
-            <li class="dropdown">
-                <a href="#" class="active">WORKS</a>
-                <div class="dropdown-content">
-                    <a href="#gallery1">Gallery 1</a>
-                    <a href="#gallery2">Gallery 2</a>
-                    <a href="#gallery3">Gallery 3</a>
-                    <a href="#gallery4">Gallery 4</a>
-                    <a href="#gallery5">Gallery 5</a>
-                </div>
-            </li>
-            <li><a href="../news/">NEWS</a></li>
-            <li><a href="../statement/">STATEMENT</a></li>
-            <li><a href="../links/">LINKS</a></li>
-            <li><a href="../contact/">CONTACT</a></li>
-        </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="#gallery1">گالری ۱</a></li>
+      <li><a href="#gallery2">گالری ۲</a></li>
+      <li><a href="#gallery3">گالری ۳</a></li>
+    </ul>
+  </nav>
 
-    <h2 class="galleries-title">Galleries</h2>
-
-    <div class="gallery-grid">
-        <div class="gallery-item" onclick="openLightbox('gallery%201.png')">
-            <img src="gallery%201.png" alt="gallery 1">
-            <span>gallery 1</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%202.png')">
-            <img src="gallery%202.png" alt="gallery 2">
-            <span>gallery 2</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%203.png')">
-            <img src="gallery%203.png" alt="gallery 3">
-            <span>gallery 3</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%204.png')">
-            <img src="gallery%204.png" alt="gallery 4">
-            <span>gallery 4</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%205.png')">
-            <img src="gallery%205.png" alt="gallery 5">
-            <span>gallery 5</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%206.png')">
-            <img src="gallery%206.png" alt="gallery 6">
-            <span>gallery 6</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%207.png')">
-            <img src="gallery%207.png" alt="gallery 7">
-            <span>gallery 7</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%208.png')">
-            <img src="gallery%208.png" alt="gallery 8">
-            <span>gallery 8</span>
-        </div>
-        <div class="gallery-item" onclick="openLightbox('gallery%209.png')">
-            <img src="gallery%209.png" alt="gallery 9">
-            <span>gallery 9</span>
-        </div>
+  <div class="galleries-title">گالری ۱</div>
+  <div class="gallery-grid" id="gallery1">
+    <div class="gallery-item">
+      <img src="gallery1-1.jpg" alt="گالری 1 - عکس 1">
+      <span>عکس ۱</span>
     </div>
-
-    <!-- Lightbox -->
-    <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-        <span class="close" onclick="closeLightbox()">&times;</span>
-        <img id="lightbox-img" src="" alt="">
+    <div class="gallery-item">
+      <img src="gallery1-2.jpg" alt="گالری 1 - عکس 2">
+      <span>عکس ۲</span>
     </div>
+    <!-- اگر عکس بیشتر خواستی همین ساختار را تکرار کن -->
+  </div>
 
-    <footer>
-        © 2021
-    </footer>
+  <div class="galleries-title">گالری ۲</div>
+  <div class="gallery-grid" id="gallery2">
+    <div class="gallery-item">
+      <img src="gallery2-1.jpg" alt="گالری 2 - عکس 1">
+      <span>عکس ۱</span>
+    </div>
+    <div class="gallery-item">
+      <img src="gallery2-2.jpg" alt="گالری 2 - عکس 2">
+      <span>عکس ۲</span>
+    </div>
+  </div>
 
-    <script>
-        function openLightbox(imageSrc) {
-            document.getElementById('lightbox').style.display = 'block';
-            document.getElementById('lightbox-img').src = imageSrc;
-        }
+  <div class="galleries-title">گالری ۳</div>
+  <div class="gallery-grid" id="gallery3">
+    <div class="gallery-item">
+      <img src="gallery3-1.jpg" alt="گالری 3 - عکس 1">
+      <span>عکس ۱</span>
+    </div>
+    <div class="gallery-item">
+      <img src="gallery3-2.jpg" alt="گالری 3 - عکس 2">
+      <span>عکس ۲</span>
+    </div>
+  </div>
 
-        function closeLightbox() {
-            document.getElementById('lightbox').style.display = 'none';
-        }
-
-        // Mobile dropdown toggle
-        document.addEventListener('DOMContentLoaded', function() {
-            const dropdown = document.querySelector('.dropdown');
-            const dropdownContent = document.querySelector('.dropdown-content');
-            
-            if (window.innerWidth <= 600) {
-                dropdown.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    dropdownContent.style.display = dropdownContent.style.display === 'block' ? 'none' : 'block';
-                });
-            }
-        });
-    </script>
+  <footer>
+    © 2024
+  </footer>
 </body>
 </html>
